Fix main content padding on small screens

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -23,9 +23,9 @@
 
 .main-content {
   margin: auto;
-  margin-top: 24px;
+  padding: 24px;
   @media (max-width: 599px) {
-    margin: 16px;
+    padding: 16px;
   }
 
   // adds padding to the main content container on larger screens (above 1280px wide)
